--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,12 @@
-== README
+= Starting application
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+1. Remove Gemfile.lock
+2. Add into Gemfile
+<tt>
+# Windows does not include zoneinfo files, so bundle the tzinfo-data gem
+gem 'tzinfo-data', platforms: [:mingw, :mswin]
+</tt>
+3. <tt>bundle install</tt>
+4. <tt>rake db:migrate RAILS_ENV=development</tt>
+5. <tt>rails s</tt>
 
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
